# module-sample

./: CMakeLists.txt
sample2/: sample2.c  sample2.h
src/: plain.c  plain.h
zephyr/: CMakeLists.txt
